--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="fzVhysF1f7L3TCiSUZqqnQypC8v18bIyWA81fuxKqf0" />
   <title>Kho AI của Lâm</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="ai.css">
